--- a/header.html
+++ b/header.html
@@ -4,12 +4,8 @@
 	<link rel="shortcut icon" href="icon.png">
 	<link rel="icon" href="icon.png">
 	<link rel="stylesheet" type="text/css" href="header.css">
-	<script type="text/javascript" href="script.js"></script>
 	<!--bootstrap and stuff-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
 	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Open+Sans|Shadows+Into+Light" rel="stylesheet">
 </head>
 
 <!--BEGIN HEADER-->
@@ -38,7 +34,7 @@
 				<!--Acitve will be set by a script based on URL-->
 				<div class="button active"><a>Home</a></div>
 				<div class="button"><a>Donate</a></div>
-				<div class="button"><a>Raffle (closed)</a></div>
+				<div class="button"><a>Raffle (Closed)</a></div>
 			</div>
 			<!--SCIPT MUST STAY OUT OF ABOVE DIV SO LAST_CHILD WORKS CORRECTLY-->
 			<script>//TODO: selectActiveMenuButton();</script>
