--- a/home.html
+++ b/home.html
@@ -5,7 +5,12 @@
 	<link rel="icon" href="icon.png">
 	<link rel="stylesheet" type="text/css" href="header.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="jumbotron.css">
 	<!--bootstrap and stuff-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
 	<!--fonts-->
 	</head>
 
@@ -48,7 +53,12 @@
 	</td></tr>
 	<tr><td>
 		<!--START OCEAN WITH DONATE BUTTON-->
-
+		<div style="display:flex;justify-content:center;align-items:center;" id="jumbotron" class="jumbotron vertical-center">
+		<div class="container"> 
+			<h1 id="title">Title</h1>
+			<button id="button" type="button" class="btn btn-outline-primary">Donate</button>
+		</div>
+	</div>
 		<!--END OCEAN WITH DONATE BUTTON-->
 	</td></tr>
 	<tr><td>
