Added panels and footerpanel

--- a/home.html
+++ b/home.html
@@ -62,23 +62,34 @@
 		<!--END OCEAN WITH DONATE BUTTON-->
 	</td></tr>
 	<tr><td>
-		<!--START Panel1 WITH DONATE BUTTON-->
+		<!--START Panel1-->
+		<div class="panel" id="panel1">
 
-		<!--END Panel1 WITH DONATE BUTTON-->
+		</div>
+		<!--END Panel1-->
 	</td></tr>
 	<tr><td>
-		<!--START Panel2 WITH DONATE BUTTON-->
-
-		<!--END Panel2 WITH DONATE BUTTON-->
+		<!--START Panel2 -->
+		<div class="panel" id="panel2">
+		</div>
+		<!--END Panel2-->
 	</td></tr>
 	<tr><td>
-		<!--START Panel3 WITH DONATE BUTTON-->
-
-		<!--END Panel3 WITH DONATE BUTTON-->
+		<!--START Panel3-->
+		<div class="panel" id="panel3">
+		</div>
+		<!--END Panel3-->
 	</td></tr>
 	<tr><td>
-		<!--START Panel4 WITH DONATE BUTTON-->
-
-		<!--END Panel4 WITH DONATE BUTTON-->
+		<!--START Panel4-->
+		<div class="panel" id="panel4">
+		</div>
+		<!--END Panel4-->
+	</td></tr>
+	<tr><td>
+		<!--START footer-->
+		<div class="panel" id="footer">
+		</div>
+		<!--END footer-->
 	</td></tr>
 </table>
