--- a/home.html
+++ b/home.html
@@ -100,9 +100,9 @@ for(i=0;i<aObj.length;++i) {
 		<div class="panel" id="footer">
 			<span>&copy; 2016 by Pacific Investing Foundation Inc.</br>
 			Contact Us At: PacificInvestingFoundation@gmail.com<br>
-			<a href="https://twitter.com/PacificInvFound"><img src="https://static.wixstatic.com/media/9c4b521dd2404cd5a05ed6115f3a0dc8.png"
+			<a href="https://twitter.com/PacificInvFound"><img src="icon_twitter.png"
 			    style="width:39px;height:39px;object-fit:cover;"></a>
-			<a href="https://plus.google.com/u/2/118290656564580363048"><img src="https://static.wixstatic.com/media/74d327d3628e4f14800301f1c61013b0.png"
+			<a href="https://plus.google.com/u/2/118290656564580363048"><img src="icon_google.png"
 			    style="width:39px;height:39px;object-fit:cover;"></a>
 				</span>
 		</div>
