--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="jumbotron.css">
 	<!--bootstrap and stuff-->
 	<!--fonts-->
+	<!--Open Sans font for the jumbotron-->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 
 
@@ -64,7 +66,7 @@ for(i=0;i<aObj.length;++i) {
 		<!--START OCEAN WITH DONATE BUTTON-->
 		<div style="display:flex;justify-content:center;align-items:center;" id="jumbotron" class="jumbotron vertical-center">
 				<div class="container">
-					<h1 id="title">Investing in a Better Us.</h1>
+					<h1 id="title">Stawp the horrible puns on investing 2k16.</h1>
 					<button id="button" type="button" class="btn btn-outline-primary">Contribute</button>
 				</div>
 			</div>
