--- a/home.html
+++ b/home.html
@@ -1,74 +1,13 @@
 <!DOCTYPE html>
+<?php include "functions.php"; ?>
 <head>
-	<title>Pacific Investment Foundation</title>
-	<link rel="shortcut icon" href="icon.png">
-	<link rel="icon" href="icon.png">
-	<link rel="stylesheet" type="text/css" href="header.css">
-	<link rel="stylesheet" type="text/css" href="panels.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="jumbotron.css">
-	<!--bootstrap and stuff STOP REMOVING IT-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
-	<!--fonts-->
-	<!--Open Sans font for the jumbotron-->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	</head>
-
+       <?php getHead(); ?>
+</head>
 
 <table><tbody>
 	<tr><td>
 		<!--BEGIN HEADER-->
-		<div id="header">
-			<div id="headernarrower">
-				<div id="titleandlogo">
-					<!--Text and Logo animated-->
-					<!--Left aligned-->
-					<!--TODO: Get the font working for the title...
-					(may require moving the logo around in css file)-->
-					<span title="TODO: Change font...">
-					PACIFIC
-					<br>
-					INVESTING
-					<br>
-					FOUNDATION
-					</span>
-					<!--Floated to correct position and size-->
-
-					<div id="logo"></div>
-				</div>
-				<!--Active will be set by a script based on current URL-->
-				<div id="bar">
-					<a href="home.html" class="button">Home</a>
-					<a href="contribute.html" class="button">Contribute</a>
-					<a href="raffle.html" class="button">Raffle (Closed)</a>
-				</div>
-				<!--Script can go wherever it wants now, but it has grown accustomed to this spot.  It has even made a few friends!-->
-				<script>
-//Sorry for strange indentaion... this just makes it look nicer in chrome
-//Get all links in the menu bar
-var aObj = document.getElementById('bar').getElementsByTagName('a');
-var found = false;
-//For each...
-for(i=0;i<aObj.length;++i) {
-	//Test to see f the link is in the current address
-	if(document.location.href.indexOf(aObj[i].href)>=0) {
-		//If it is, make that button active.
-		aObj[i].className+=' active';
-  	//Our work here is done!
-		found = true;
-		break;
-	}
-}
-//If the button was found, it will now be active and found will be true otherwise we need to set it to home and assume the page was gotten from index.*
-if(!found){
-	aObj[0].className += ' active'; //Home button should always be first...
-}
-				</script>
-			</div>
-		</div>
+        <?php getHeaderBody(); ?>
 		<!--END HEADER-->
 	</td></tr>
 	<tr><td>
@@ -115,23 +54,15 @@ if(!found){
 		<!--END Panel3-->
 	</td></tr>
 	<tr><td>
-		<!--START Panel4-->
+		<!--START Newsletter Signup-->
 		<div class="panel" id="panel4">
 			<iframe sandbox="allow-forms allow-same-origin allow-scripts" src="newsletter_signup.php"></iframe>
 		</div>
-		<!--END Panel4-->
+		<!--END Newsletter Signup-->
 	</td></tr>
 	<tr><td>
 		<!--START footer-->
-		<div class="panel" id="footer">
-			<span>&copy; 2016 by Pacific Investing Foundation Inc.</br>
-			Contact Us At: PacificInvestingFoundation@gmail.com<br>
-			<a href="https://twitter.com/PacificInvFound"><img src="icon_twitter.png"
-			    style="width:39px;height:39px;object-fit:cover;"></a>
-			<a href="https://plus.google.com/u/2/118290656564580363048"><img src="icon_google.png"
-			    style="width:39px;height:39px;object-fit:cover;"></a>
-				</span>
-		</div>
+		<?php getFooterBody(); ?>
 		<!--END footer-->
 	</td></tr>
 </tbody></table>
